Fix footer nav style on small screens

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -80,7 +80,7 @@ body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure { m
         &:hover { color: rgb(255,255,255); }
     }
     .footer-nav { padding: 2em 0; border-bottom: 1px solid $grey-color-light; text-align: center;
-        li { list-style: none; display: inline-block; padding-right: 2em; 
+        li { list-style: none;
             &:last-child { padding-right: 0; }
         }
     }
@@ -119,5 +119,8 @@ body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure { m
     
     // Banner
     .banner { max-height: 50em; }
+    
+    // Footer
+    .footer-nav li { display: inline-block; padding-right: 2em; }
 }
  
